--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,12 +1,15 @@
-﻿<Window x:Class="A4_RD_Quiz.MainWindow"
+﻿<Window x:Name="StartWindow" x:Class="A4_RD_Quiz.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:A4_RD_Quiz"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Start Quiz" Height="300" Width="600" ResizeMode="NoResize" Topmost="True">
     <Grid>
-        
+        <TextBox x:Name="tbx_NameEntry" HorizontalAlignment="Left" Height="30" Margin="25,64,0,0" TextWrapping="Wrap" Text="Name Entry" VerticalAlignment="Top" Width="450" FontSize="18"/>
+        <Label x:Name="lbl_Name" Content="Player Name" HorizontalAlignment="Left" Margin="25,20,0,0" VerticalAlignment="Top" FontSize="22" RenderTransformOrigin="0.848,0.476"/>
+        <Button x:Name="btn_Start" Content="Start" HorizontalAlignment="Left" Margin="480,64,0,0" VerticalAlignment="Top" Width="104" Height="30"/>
+
     </Grid>
 </Window>
